--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Название документа</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
+<?xml version="1.0" encoding="utf-8"?>
 <body>
 
+
+111
 <a href="#" id="main">
     <div id="okno">
-        Всплывающее окошко!
+        Большой такой горы
     </div>
 </a>
 
-<a href="#main">Вызвать всплывающее окно</a>
-123
+<a href="#main">горы!!!</a>
+222
+
+<!--<a href="#" onClick="alert('Hello World!')">горы</a>-->
+<!--3333-->
+
 
 </body>
 </html>
